feat: 음식점 데이터 저장 API 구현 및 프로젝트 구조 수정
음식점 데이터의 content_type_id도 다루기 위해 기존의 setLocations() 수정했습니다.

추가로 중복 코드를 JsonParsingUtil 클래스로 분리해 사용합니다.
또한, 기존의 URL 생성시 문자열을 그대로 사용하는 방식이 아닌 변수화해 사용하는 방식으로 수정합니다.